# github-metrics

./: CHANGELOG.md  README.md  example.py  pyproject.toml
examples/: example.py
src/github_metrics/: __init__.py  client.py  collector.py  main.py  models.py  queries.py  test_analyzer.py
src/github_metrics/config/: logging.py  settings.py
tests/: test_client.py  test_collector.py  test_models.py  test_test_analyzer.py
