[build-system]
requires = ["uv_build>=0.9.9"]
build-backend = "uv_build"

[project]
name = "github-metrics"
version = "0.1.0"
description = "Async library for collecting GitHub PR metrics using GraphQL API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "l0kifs", email = "l0kifs91@gmail.com" }
]
maintainers = [
    { name = "l0kifs", email = "l0kifs91@gmail.com" }
]
keywords = ["github", "metrics", "pull-request", "graphql", "api", "analytics", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/l0kifs/github-metrics"
Documentation = "https://github.com/l0kifs/github-metrics/blob/main/README.md"
Repository = "https://github.com/l0kifs/github-metrics.git"
Issues = "https://github.com/l0kifs/github-metrics/issues"
Changelog = "https://github.com/l0kifs/github-metrics/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["github_metrics"]
